# rtsp-discover

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  resultados_cam.csv
.github/workflows/: ci.yml
tests/: test_smoke.py
